--- a/index.html
+++ b/index.html
@@ -47,55 +47,73 @@
 	</head>
 	<body>
 		<!-- Header/navbar -->
-		    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Homepage">
-          <img
-            src="images/logo.png"
-            alt="Louise Fong Logo"
-            class="img-fluid logo"
-            width="100px"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item px-4">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item px-4">
-              <a class="nav-link" href="/about.html" title="My Story"
-                >MY STORY</a
-              >
-            </li>
-            <li class="nav-item px-4">
-              <a class="nav-link" href="/work.html" title="My work">MY WORK</a>
-            </li>
-            <li class="nav-item px-4">
-              <a class="nav-link" href="/contact.html" title="Contact Louise"
-                >CONTACT</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a
+					class="navbar-brand"
+					href="/"
+					title="Homepage"
+				>
+					<img
+						src="images/logo.png"
+						alt="Louise Fong Logo"
+						class="img-fluid logo"
+						width="100px"
+					/>
+				</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarNav"
+				>
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item px-4">
+							<a
+								class="nav-link active"
+								aria-current="page"
+								href="/"
+								title="Homepage"
+								>HOME</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/about.html"
+								title="My Story"
+								>MY STORY</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/work.html"
+								title="My work"
+								>MY WORK</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/contact.html"
+								title="Contact Louise"
+								>CONTACT</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 		<!-- Hero -->
 		<div class="hero container-fluid">
@@ -224,8 +242,8 @@
 				<div class="col-6">
 					<img
 						class="img-fluid left-rounded"
-						src=""
-						alt=""
+						src="images/louise.png"
+						alt="Louise Fong"
 					/>
 				</div>
 			</div>
@@ -293,14 +311,9 @@
 		</div>
 
 		<!-- Footer -->
-		<hr class="mt-5"/>
+		<hr class="mt-5" />
 		<footer class="container text-center">
-			<a
-				href="mailto:lfong96@hotmail.co.uk"
-				class="email-link"
-				title="Email Louise"
-				>Reach out and let's code together!</a
-			>
+			<h4 class="text-center">&lt Connect Code Create &gt</h4>
 			<div class="social-links d-flex justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
