--- a/work.html
+++ b/work.html
@@ -42,67 +42,88 @@
 		></script>
 	</head>
 	<body>
-<!-- Header/navbar -->
-		    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Homepage">
-          <img
-            src="images/logo.png"
-            alt="Louise Fong Logo"
-            class="img-fluid logo"
-            width="100px"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item px-4">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="/"
-                title="Homepage"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item px-4">
-              <a class="nav-link" href="/about.html" title="My Story"
-                >MY STORY</a
-              >
-            </li>
-            <li class="nav-item px-4">
-              <a class="nav-link active" href="/work.html" title="My work">MY WORK</a>
-            </li>
-            <li class="nav-item px-4">
-              <a class="nav-link" href="/contact.html" title="Contact Louise"
-                >CONTACT</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+		<!-- Header/navbar -->
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a
+					class="navbar-brand"
+					href="/"
+					title="Homepage"
+				>
+					<img
+						src="images/logo.png"
+						alt="Louise Fong Logo"
+						class="img-fluid logo"
+						width="100px"
+					/>
+				</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarNav"
+				>
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="/"
+								title="Homepage"
+								>HOME</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/about.html"
+								title="My Story"
+								>MY STORY</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link active"
+								href="/work.html"
+								title="My work"
+								>MY WORK</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/contact.html"
+								title="Contact Louise"
+								>CONTACT</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 		<!-- Project Hero -->
 
 		<div class="hero container-fluid">
-			<img class="img-fluid" src="images/work-hero.png" alt="My Work Logo">
+			<img
+				class="img-fluid"
+				src="images/work-hero.png"
+				alt="My Work Logo"
+			/>
 		</div>
 
 		<!-- Coding Projects -->
 		<div class="container-fluid">
-			<div class="row d-flex justify-content-evenly">
+			<div class="row d-flex justify-content-center mx-5">
 				<h2 class="mt-5 mb-5 text-center">Coding Projects</h2>
 
 				<!-- Project 1 -->
@@ -160,35 +181,84 @@
 					<div class="image-container">
 						<img
 							class="img-fluid hover-img"
-							src="images/matcha.png"
+							src="images/weather.png"
 							alt=""
 						/>
 						<div class="overlay">
 							<div class="overlay-text">
-								<a href="">Visit Matcha Landing Page</a>
+								<a
+									href="https://weather-5days-forecast.netlify.app"
+									target="_blank"
+									>Visit Weather App</a
+								>
 							</div>
 						</div>
+					</div>
+					<h4 class="mt-2 text-center">Weather App</h4>
+					<p class="text-center">
+						Built using HTML, CSS, Javascript, APIs and Github for the SheCodes
+						Plus Final Project.
+					</p>
+				</div>
+
+			
+					<!-- Project 4 -->
+					<div class="col-sm-4 mt-5">
+						<div class="image-container">
+							<img
+								class="img-fluid hover-img"
+								src="images/weather.png"
+								alt=""
+							/>
+							<div class="overlay">
+								<div class="overlay-text">
+									<a
+										href="https://weather-5days-forecast.netlify.app"
+										target="_blank"
+										>Visit Weather App</a
+									>
+								</div>
+							</div>
 						</div>
-						<h4 class="mt-2 text-center">Matcha Landing Page</h4>
+						<h4 class="mt-2 text-center">Weather App</h4>
 						<p class="text-center">
-							Built using HTML, CSS, Javascript and Editor for the SheCodes
-							Basics Final Project.
+							Built using HTML, CSS, Javascript, APIs and Github for the
+							SheCodes Plus Final Project.
 						</p>
 					</div>
-					
-				</div>
+
+					<!-- Project 5 -->
+					<div class="col-sm-4 mt-5">
+						<div class="image-container">
+							<img
+								class="img-fluid hover-img"
+								src="images/weather.png"
+								alt=""
+							/>
+							<div class="overlay">
+								<div class="overlay-text">
+									<a
+										href="https://weather-5days-forecast.netlify.app"
+										target="_blank"
+										>Visit Weather App</a
+									>
+								</div>
+							</div>
+						</div>
+						<h4 class="mt-2 text-center">Weather App</h4>
+						<p class="text-center">
+							Built using HTML, CSS, Javascript, APIs and Github for the
+							SheCodes Plus Final Project.
+						</p>
+					</div>
+				
 			</div>
 		</div>
 
-	<!-- Footer -->
-		<hr class="mt-5"/>
+		<!-- Footer -->
+		<hr class="mt-5" />
 		<footer class="container text-center">
-			<a
-				href="mailto:lfong96@hotmail.co.uk"
-				class="email-link"
-				title="Email Louise"
-				>Reach out and let's code together!</a
-			>
+		<h4 class="text-center">&lt Connect Code Create &gt</h4>
 			<div class="social-links d-flex justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
