Fixed skills icon responsive issue

--- a/about.html
+++ b/about.html
@@ -111,6 +111,7 @@
 			</div>
 		</nav>
 
+		<!-- Hero -->
 		<div class="hero container-fluid">
 			<img
 				class="img-fluid"
@@ -119,10 +120,11 @@
 			/>
 		</div>
 
-		<div class="container-fluid about-me">
+		<!-- My Story -->
+		<div class="container-fluid mx-5">
 			<div class="row">
 				<!-- Then -->
-				<div class="col-sm-6 mt-5">
+				<div class="col-lg-6 mt-5">
 					<h1>Then.</h1>
 					<p>
 						Prior to my coding and SheCodes journey, I was working in the
@@ -138,25 +140,26 @@
 					</p>
 				</div>
 
-				<div class="col-sm-6">
+				<div class="col-lg-6 mt-5">
 					<img
-						class="img-fluid left-rounded"
+						class="about-img img-fluid left-rounded"
 						src="images/about1.JPG"
 						alt="Louise Fong"
+						width="500px"
 					/>
 				</div>
 			</div>
 
 			<div class="row">
 				<!-- Now -->
-				<div class="col-sm-6 mt-5">
+				<div class="col-lg-6 mt-5">
 					<img
-						class="img-fluid right-rounded"
+						class="about-img img-fluid d-block arch"
 						src="images/about2.png"
 						alt="Louise Fong"
 					/>
 				</div>
-				<div class="col-sm-6 mt-5">
+				<div class="col-lg-6 mt-5">
 					<h1>Now.</h1>
 					<p>
 						After completing the SheCodes Basics course, I felt that I had
@@ -174,7 +177,7 @@
 
 			<div class="row">
 				<!-- Next -->
-				<div class="col-sm-6 mt-5">
+				<div class="col-lg-6 mt-5">
 					<h1>Next.</h1>
 					<p>
 						Upon completion of the workshops and having upskilled - learning
@@ -186,6 +189,14 @@
 						but most importantly I wanted to pursue a new career where typically
 						women are underpresented and to help bridge the gender gap in tech.
 					</p>
+				</div>
+
+				<div class="col-lg-6 mt-5">
+					<img
+						class="about-img img-fluid d-block left-rounded"
+						src="images/about2.png"
+						alt="Louise Fong"
+					/>
 				</div>
 			</div>
 		</div>
