--- a/contact.html
+++ b/contact.html
@@ -164,12 +164,7 @@
 		<!-- Footer -->
 		<hr class="mt-5" />
 		<footer class="container text-center">
-			<a
-				href="mailto:lfong96@hotmail.co.uk"
-				class="email-link"
-				title="Email Louise"
-				>Reach out and let's code together!</a
-			>
+			<h4 class="text-center">&lt Connect Code Create &gt</h4>
 			<div class="social-links d-flex justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
