--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 		</div>
 
 		<!-- About and skills icons -->
-		<div class="container-fluid about-intro mx-5">
+		<div class="container-fluid mx-5">
 			<div class="row">
-				<div class="col-6">
-					<h3 class="mt-5 text-center mb-5">&lt; Hello World &gt;</h3>
-					<p>
+				<div class="col-lg-6 hero">
+					<h1 class="mt-5 text-center mb-5">&lt; Hello World &gt;</h1>
+					<p class="mx-5">
 						Thank you for checking out my portfolio. My name is Louise and I am
 						a front-end developer based and full-time tea addict based in
 						Scotland. Aside from coding, I love to cook, read murder mysteries
@@ -140,7 +140,7 @@
 						2023, I have learnt a lot! <br />
 						Here's some technologies I've worked with:
 					</p>
-					<div class="row skills-icon mt-5">
+					<div class="row skills mt-5">
 						<div class="col">
 							<img
 								src="icons/html.png"
@@ -253,7 +253,7 @@
 		<div class="container-fluid about-intro mx-5">
 			<div class="row">
 				<!-- Photo -->
-				<div class="col-6 mt-5">
+				<div class="col-lg-6 hero mt-5">
 					<img
 						class="img-fluid right-rounded"
 						src="images/matcha.png"
@@ -261,9 +261,9 @@
 					/>
 				</div>
 
-				<div class="col-6">
-					<h3 class="mt-5 mb-5 text-center">&lt; Explore My Projects &gt;</h3>
-					<p>
+				<div class="col-lg-6 hero">
+					<h1 class="mt-5 mb-5 text-center">&lt; Explore My Projects &gt;</h1>
+					<p class="mx-5">
 						Whilst you're here, why not take a look at my projects? Since the
 						start of my coding journey I have found it to be a satisfying and
 						rewarding process. I am constantly learning something new and have
@@ -274,8 +274,8 @@
 
 					<!-- My work button -->
 					<a
-						class="btn justify-content-center about-me-btn"
-						href="/projects.html"
+						class="btn justify-content-center"
+						href="/work.html"
 						>My Work</a
 					>
 				</div>
@@ -283,8 +283,8 @@
 		</div>
 
 		<!-- Certifications -->
-		<div class="container">
-			<h2 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h2>
+		<div class="container-fluid">
+			<h1 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h1>
 			<div class="row">
 				<div class="col">
 					<img
