--- a/work.html
+++ b/work.html
@@ -124,7 +124,7 @@
 		<!-- Coding Projects -->
 		<div class="container-fluid">
 			<div class="row d-flex justify-content-center mx-5">
-				<h2 class="mt-5 mb-5 text-center">Coding Projects</h2>
+				<h2 class="mt-5 mb-5 text-center">&lt Coding Projects &gt</h2>
 
 				<!-- Project 1 -->
 				<div class="col-sm-4">
