Fixed responsiveness - certs

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 				<div class="col-6">
 					<img
 						class="img-fluid left-rounded"
-						src="images/louise.png"
+						src="images/matcha.png"
 						alt="Louise Fong"
 					/>
 				</div>
@@ -286,23 +286,23 @@
 		<div class="container-fluid">
 			<h1 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h1>
 			<div class="row">
-				<div class="col">
+				<div class="col-sm-4">
 					<img
-						class="img-fluid"
+						class="img-fluid certs"
 						src="images/basics-cert.png"
 						alt="SheCodes Basics Certificate"
 					/>
 				</div>
-				<div class="col">
+				<div class="col-sm-4">
 					<img
-						class="img-fluid"
+						class="img-fluid certs"
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
 				</div>
-				<div class="col">
+				<div class="col-sm-4">
 					<img
-						class="img-fluid"
+						class="img-fluid certs"
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
