--- a/about.html
+++ b/about.html
@@ -121,10 +121,10 @@
 		</div>
 
 		<!-- My Story -->
-		<div class="container-fluid mx-5">
+		<div class="container-fluid">
 			<div class="row">
 				<!-- Then -->
-				<div class="col-lg-6 mt-5">
+				<div class="col-lg-6">
 					<h1>Then.</h1>
 					<p>
 						Prior to my coding and SheCodes journey, I was working in the
@@ -140,12 +140,13 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 mt-5">
+				<div class="col-lg-6">
 					<img
 						class="about-img img-fluid left-rounded"
 						src="images/about1.JPG"
 						alt="Louise Fong"
 						width="500px"
+					
 					/>
 				</div>
 			</div>
@@ -154,7 +155,7 @@
 				<!-- Now -->
 				<div class="col-lg-6 mt-5">
 					<img
-						class="about-img img-fluid d-block arch"
+						class="about-img img-fluid right-rounded"
 						src="images/about2.png"
 						alt="Louise Fong"
 					/>
