--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</div>
 
 		<!-- About and skills icons -->
-		<div class="container-fluid mx-5">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-6 hero">
 					<h1 class="mt-5 text-center mb-5">&lt; Hello World &gt;</h1>
@@ -234,47 +234,53 @@
 					<a
 						class="btn justify-content-center about-me-btn mt-5"
 						href="/about.html"
-						>About Me</a
+						>My Story</a
 					>
 				</div>
 
 				<!-- Photo -->
-				<div class="col-6">
+				<div class="col-lg-6 p-0">
 					<img
-						class="img-fluid left-rounded"
+						class="img-fluid left-rounded mt-5"
 						src="images/matcha.png"
 						alt="Louise Fong"
+						style="max-width: 100%"
 					/>
 				</div>
 			</div>
 		</div>
 
 		<!-- Explore Projects -->
-		<div class="container-fluid about-intro mx-5">
+		<div class="container-fluid">
 			<div class="row">
 				<!-- Photo -->
-				<div class="col-lg-6 hero mt-5">
+				<div class="col-lg-6 p-0 mt-5">
 					<img
-						class="img-fluid right-rounded"
+						class="img-fluid right-rounded photo"
 						src="images/matcha.png"
 						alt=""
+						style="object-fit: contain"
 					/>
 				</div>
 
 				<div class="col-lg-6 hero">
 					<h1 class="mt-5 mb-5 text-center">&lt; Explore My Projects &gt;</h1>
 					<p class="mx-5">
-						Whilst you're here, why not take a look at my projects? Since the
-						start of my coding journey I have found it to be a satisfying and
-						rewarding process. I am constantly learning something new and have
-						discovered that Google is my best friend, never be afraid to ask
-						questions when stuck! I love late night coding sessions whilst
-						listening to lo-fi playlists.
+						Whilst you're here, why not take a look at my projects? From the
+						challenges to the final projects, working on them helps me
+						consolidate my knowledge and allows for me to be creative.
+						<br />
+						<br />
+						Since the start of my coding journey I have found it to be a
+						satisfying and rewarding process. I am constantly learning something
+						new and have discovered that Google is my best friend, never be
+						afraid to ask questions when stuck! I love late night coding
+						sessions whilst listening to lo-fi playlists.
 					</p>
 
 					<!-- My work button -->
 					<a
-						class="btn justify-content-center"
+						class="btn justify-content-center mt-5"
 						href="/work.html"
 						>My Work</a
 					>
@@ -285,22 +291,22 @@
 		<!-- Certifications -->
 		<div class="container-fluid">
 			<h1 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h1>
-			<div class="row">
-				<div class="col-sm-4">
+			<div class="row mx-5 justify-content-between">
+				<div class="col-sm-4 mb-3">
 					<img
 						class="img-fluid certs"
 						src="images/basics-cert.png"
 						alt="SheCodes Basics Certificate"
 					/>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-4 mb-3">
 					<img
 						class="img-fluid certs"
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-4 mb-3">
 					<img
 						class="img-fluid certs"
 						src="images/plus-cert.png"
