--- a/work.html
+++ b/work.html
@@ -122,8 +122,8 @@
 		</div>
 
 		<!-- Coding Projects -->
-		<div class="container-fluid">
-			<div class="row d-flex justify-content-center mx-5">
+		<div class="container-fluid p-3">
+			<div class="row d-flex justify-content-center">
 				<h2 class="mt-5 mb-5 text-center">&lt Coding Projects &gt</h2>
 
 				<!-- Project 1 -->
@@ -144,8 +144,8 @@
 							</div>
 						</div>
 					</div>
-					<h4 class="mt-2 text-center">Santorini Landing Page</h4>
-					<p class="text-center">
+					<h4 class="project-title mt-2 text-center">Santorini Landing Page</h4>
+					<p class="project-info text-center">
 						Built using HTML, CSS, Javascript and Editor for the SheCodes Dream
 						Destination Challenge.
 					</p>
@@ -169,8 +169,8 @@
 							</div>
 						</div>
 					</div>
-					<h4 class="mt-2 text-center">Matcha Landing Page</h4>
-					<p class="text-center">
+					<h4 class="project-title mt-2 text-center">Matcha Landing Page</h4>
+					<p class="project-info text-center">
 						Built using HTML, CSS, Javascript and Editor for the SheCodes Basics
 						Final Project.
 					</p>
@@ -194,8 +194,8 @@
 							</div>
 						</div>
 					</div>
-					<h4 class="mt-2 text-center">Weather App</h4>
-					<p class="text-center">
+					<h4 class="project-title mt-2 text-center">Weather App</h4>
+					<p class="project-info text-center">
 						Built using HTML, CSS, Javascript, APIs and Github for the SheCodes
 						Plus Final Project.
 					</p>
@@ -213,17 +213,17 @@
 							<div class="overlay">
 								<div class="overlay-text">
 									<a
-										href="https://weather-5days-forecast.netlify.app"
+										href=""
 										target="_blank"
-										>Visit Weather App</a
+										>Visit Portfolio</a
 									>
 								</div>
 							</div>
 						</div>
-						<h4 class="mt-2 text-center">Weather App</h4>
-						<p class="text-center">
-							Built using HTML, CSS, Javascript, APIs and Github for the
-							SheCodes Plus Final Project.
+						<h4 class="project-title mt-2 text-center">Responsive Portfolio</h4>
+						<p class="project-info text-center">
+							Built using HTML, CSS, Javascript, Github, Bootstrap and Flexbox to create a responsive portfolio for the
+							SheCodes Pro Final Project.
 						</p>
 					</div>
 
@@ -245,8 +245,8 @@
 								</div>
 							</div>
 						</div>
-						<h4 class="mt-2 text-center">Weather App</h4>
-						<p class="text-center">
+						<h4 class="project-title mt-2 text-center">Weather App</h4>
+						<p class="project-info text-center">
 							Built using HTML, CSS, Javascript, APIs and Github for the
 							SheCodes Plus Final Project.
 						</p>
