--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-lg-6">
 					<img
 						class="img-fluid right-rounded"
 						src="images/laptop.png"
@@ -130,7 +130,7 @@
 					/>
 				</div>
 
-				<div class="col-sm-6 justify-content-center">
+				<div class="col-lg-6 justify-content-center">
 					<div class="contact">
 						<h2 class="text-center">&lt Connect Code Create &gt</h2>
 						<h3 class="text-center">Email</h3>
