Fixed phone responsiveness

--- a/index.html
+++ b/index.html
@@ -291,24 +291,31 @@
 		<!-- Certifications -->
 		<div class="container-fluid">
 			<h1 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h1>
-			<div class="row mx-5 justify-content-between">
-				<div class="col-sm-4 mb-3">
+			<div class="row justify-content-between">
+				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid certs"
+						class="img-fluid "
 						src="images/basics-cert.png"
 						alt="SheCodes Basics Certificate"
 					/>
 				</div>
-				<div class="col-sm-4 mb-3">
+				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid certs"
+						class="img-fluid "
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
 				</div>
-				<div class="col-sm-4 mb-3">
+				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid certs"
+						class="img-fluid "
+						src="images/plus-cert.png"
+						alt="SheCodes Plus Certificate"
+					/>
+				</div>
+				<div class="col-sm-3 mb-3">
+					<img
+						class="img-fluid "
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
