--- a/work.html
+++ b/work.html
@@ -201,64 +201,62 @@
 					</p>
 				</div>
 
-			
-					<!-- Project 4 -->
-					<div class="col-sm-4 mt-5">
-						<div class="image-container">
-							<img
-								class="img-fluid hover-img"
-								src="images/weather.png"
-								alt=""
-							/>
-							<div class="overlay">
-								<div class="overlay-text">
-									<a
-										href=""
-										target="_blank"
-										>Visit Portfolio</a
-									>
-								</div>
+				<!-- Project 4 -->
+				<div class="col-sm-4 mt-5">
+					<div class="image-container">
+						<img
+							class="img-fluid hover-img"
+							src="images/weather.png"
+							alt="Responsive Portfolio"
+						/>
+						<div class="overlay">
+							<div class="overlay-text">
+								<a
+									href="https://louise-fong-portfolio.netlify.app"
+									target="_blank"
+									>Visit Portfolio</a
+								>
 							</div>
 						</div>
-						<h4 class="project-title mt-2 text-center">Responsive Portfolio</h4>
-						<p class="project-info text-center">
-							Built using HTML, CSS, Javascript, Github, Bootstrap and Flexbox to create a responsive portfolio for the
-							SheCodes Pro Final Project.
-						</p>
 					</div>
+					<h4 class="project-title mt-2 text-center">Responsive Portfolio</h4>
+					<p class="project-info text-center">
+						Built using HTML, CSS, Javascript, Github, Bootstrap and Flexbox to
+						create a responsive portfolio for the SheCodes Pro Final Project.
+					</p>
+				</div>
 
-					<!-- Project 5 -->
-					<div class="col-sm-4 mt-5">
-						<div class="image-container">
-							<img
-								class="img-fluid hover-img"
-								src="images/weather.png"
-								alt=""
-							/>
-							<div class="overlay">
-								<div class="overlay-text">
-									<a
-										href="https://weather-5days-forecast.netlify.app"
-										target="_blank"
-										>Visit Weather App</a
-									>
-								</div>
+				<!-- Project 5 -->
+				<div class="col-sm-4 mt-5">
+					<div class="image-container">
+						<img
+							class="img-fluid hover-img"
+							src="images/weather.png"
+							alt=""
+						/>
+						<div class="overlay">
+							<div class="overlay-text">
+								<a
+									href="https://weather-5days-forecast.netlify.app"
+									target="_blank"
+									>Visit Weather App</a
+								>
 							</div>
 						</div>
-						<h4 class="project-title mt-2 text-center">Weather App</h4>
-						<p class="project-info text-center">
-							Built using HTML, CSS, Javascript, APIs and Github for the
-							SheCodes Plus Final Project.
-						</p>
 					</div>
-				
+					<h4 class="project-title mt-2 text-center">Weather App</h4>
+					<p class="project-info text-center">
+						Built using HTML, CSS, Javascript, APIs and Github for the SheCodes
+						Plus Final Project.
+					</p>
+				</div>
 			</div>
 		</div>
 
 		<!-- Footer -->
 		<hr class="mt-5" />
 		<footer class="container text-center">
-		<h4 class="text-center">&lt Connect Code Create &gt</h4>
+			<h4 class="text-center">&lt Connect Code Create &gt</h4>
 			<div class="social-links d-flex justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
