Fixed hero responsiveness on phones

--- a/about.html
+++ b/about.html
@@ -112,9 +112,9 @@
 		</nav>
 
 		<!-- Hero -->
-		<div class="hero container-fluid">
+		<div class="hero container-fluid p-0">
 			<img
-				class="img-fluid"
+				class="img-fluid lf-hero"
 				src="images/story-hero.png"
 				alt="My Story Logo"
 			/>
