--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
 		<!-- Hero -->
 		<div class="hero container-fluid">
 			<img
-				class="img-fluid"
+				class="img-fluid lf-hero"
 				src="images/contact-hero.png"
 				alt="Louise Fong Logo"
 			/>
