--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 		</nav>
 
 		<!-- Hero -->
-		<div class="hero container-fluid">
+		<div class="hero container-fluid p-0">
 			<img
-				class="img-fluid"
+				class="img-fluid lf-hero "
 				src="images/lf-hero.png"
 				alt="Louise Fong Logo"
 			/>
@@ -294,28 +294,28 @@
 			<div class="row justify-content-between">
 				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid "
+						class="img-fluid"
 						src="images/basics-cert.png"
 						alt="SheCodes Basics Certificate"
 					/>
 				</div>
 				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid "
+						class="img-fluid"
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
 				</div>
 				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid "
+						class="img-fluid"
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
 				</div>
 				<div class="col-sm-3 mb-3">
 					<img
-						class="img-fluid "
+						class="img-fluid"
 						src="images/plus-cert.png"
 						alt="SheCodes Plus Certificate"
 					/>
