--- a/work.html
+++ b/work.html
@@ -113,9 +113,9 @@
 
 		<!-- Project Hero -->
 
-		<div class="hero container-fluid">
+		<div class="hero container-fluid p-0">
 			<img
-				class="img-fluid"
+				class="img-fluid lf-hero"
 				src="images/work-hero.png"
 				alt="My Work Logo"
 			/>
