Fixed responsiveness issue

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
 					title="Homepage"
 				>
 					<img
-						src="images/logo.png"
+						src="images/logo2.png"
 						alt="Louise Fong Logo"
 						class="img-fluid logo"
-						width="100px"
 					/>
 				</a>
 				<button
@@ -118,7 +117,7 @@
 		<!-- Hero -->
 		<div class="hero container-fluid p-0">
 			<img
-				class="img-fluid lf-hero "
+				class="img-fluid lf-hero"
 				src="images/lf-hero.png"
 				alt="Louise Fong Logo"
 			/>
