--- a/work.html
+++ b/work.html
@@ -122,7 +122,7 @@
 		</div>
 
 		<!-- Coding Projects -->
-		<div class="container-fluid p-3">
+		<div class="container-fluid p-5">
 			<div class="row d-flex justify-content-center">
 				<h2 class="mt-5 mb-5 text-center">&lt Coding Projects &gt</h2>
 
@@ -139,7 +139,7 @@
 								<a
 									href="https://travel-to-santorini.netlify.app"
 									target="_blank"
-									>Visit Dream Destination Landing Page</a
+									>Visit Santorini Landing Page</a
 								>
 							</div>
 						</div>
@@ -181,7 +181,7 @@
 					<div class="image-container">
 						<img
 							class="img-fluid hover-img"
-							src="images/weather.png"
+							src="images/weather-app.png"
 							alt=""
 						/>
 						<div class="overlay">
@@ -206,7 +206,7 @@
 					<div class="image-container">
 						<img
 							class="img-fluid hover-img"
-							src="images/weather.png"
+							src="images/portfolio2.png"
 							alt="Responsive Portfolio"
 						/>
 						<div class="overlay">
